相机类修改

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -52,6 +52,7 @@
                     android:id="@+id/tv_camera_hint"/>
 
                 <FrameLayout
+                    android:id="@+id/framelayout"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1">
