--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,7 +59,11 @@
                 android:textSize="28px"/>
 
         </LinearLayout>
-
+        <Button
+            android:id="@+id/btn_lightornight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="切换"/>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
