--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#FFA000</color>
     <color name="colorAccent">#FFC107</color>
     <color name="colorNavBar">#000000</color>
+    <color name="black">#ff000000</color>
 </resources>
